# Terminal-V

./: .gitignore  ARCHITECTURE.md  CI_CD_SETUP.md  CNAME  COLLABORATORS_SETUP.md  CRITICAL_FIX.md  DESIGN_SYSTEM.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_SETUP.md  GITHUB_SETUP.md  PRODUCTION_BACKEND_SETUP.md  PUSH_TO_GITHUB.md  README.md  TROUBLESHOOTING_PAGES.md  VERIFY_DEPLOYMENT.md  package.json
.github/workflows/: ci.yml  deploy-frontend.yml
apps/core-api/: README.md  pyproject.toml
apps/core-api/core_api/: __init__.py  api.py  main.py
apps/nexus-engine/: DATA_SOURCES.md  INSTALL_GUIDE.md  OPEN_SOURCE_APIS.md  QUICK_START.md  README.md  STRUCTURE.md  WINDOWS_SETUP.md  broadcaster.py  pyproject.toml
apps/nexus-engine/nexus_engine/: __init__.py  main.py
apps/nexus-engine/nexus_engine/models/: __init__.py  aggregated_data.py
apps/nexus-engine/nexus_engine/services/: __init__.py  aggregator.py  blockchain_scanner.py  macro_econ.py  market_stream.py  news_sentiment.py  user_activity.py
apps/terminal-web/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/terminal-web/public/: CNAME
apps/terminal-web/src/: App.tsx  main.tsx
apps/terminal-web/src/components/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
apps/terminal-web/src/components/widgets/: BlockchainWidget.tsx  MacroEconWidget.tsx  MarketStreamWidget.tsx  NewsSentimentWidget.tsx  UserActivityWidget.tsx  index.ts
apps/terminal-web/src/hooks/: useNexusStream.ts
apps/terminal-web/src/pages/: Dashboard.tsx
apps/terminal-web/src/types/: nexus.ts
apps/terminal-web/src/utils/: mockData.ts
