[tool.poetry]
name = "nexus-engine"
version = "0.1.0"
description = "Nexus Engine - Data processing layer for Terminal-V"
authors = ["Terminal-V Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
aiohttp = "^3.9.0"
yfinance = "^0.2.28"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.0"
ruff = "^0.1.11"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
